--- a/modules/apps/learn/learn-taglib/build.gradle
+++ b/modules/apps/learn/learn-taglib/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: "com.liferay.alloy.taglib"
 
 buildTaglibs {
-	componentsXmlFiles "liferay-data-engine.xml"
-	javaPackage = "com.liferay.data.engine.taglib.servlet"
+	componentsXmlFiles "liferay-learn.xml"
+	javaPackage = "com.liferay.learn.taglib.servlet"
 	classpath = configurations.alloyTaglib
-	componentsXmlFiles "liferay-ddm.xml"
 }
 
 dependencies {
